--- a/index.html
+++ b/index.html
@@ -2,96 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn IFC 5 with Us!</title>
+    <meta http-equiv="refresh" content="0; url=viewer/index.html">
+    <title>IFC5 Viewer</title>
+    <script>
+        window.location.replace('viewer/index.html');
+    </script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
             margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #0056b3;
-            color: #fff;
-            padding: 1.5rem 1rem;
+            font-family: system-ui, -apple-system, "Segoe UI", sans-serif;
+            background: #143e70;
+            color: #f6f9ff;
             text-align: center;
         }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
+        .message {
+            max-width: 420px;
+            padding: 1.5rem 2rem;
+            border-radius: 18px;
+            background: rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(255, 237, 0, 0.4);
+            box-shadow: 0 25px 45px rgba(5, 26, 54, 0.45);
         }
-        header p {
-            margin: 0.5rem 0;
-            font-size: 1.2rem;
-        }
-        main {
-            padding: 2rem 1rem;
-            max-width: 800px;
-            margin: auto;
-        }
-        main h2 {
-            color: #0056b3;
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 0.8rem 1.5rem;
-            font-size: 1.2rem;
-            color: #fff;
-            background-color: #0056b3;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .cta-button:hover {
-            background-color: #003d80;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background-color: #333;
-            color: #fff;
-            font-size: 0.9rem;
-        }
-        footer a {
-            color: #00aaff;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
+        .message a {
+            color: #ffed00;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Master IFC 5</h1>
-        <p>Your gateway to understanding everything about the next generation of IFC</p>
-    </header>
-    <main>
-        <h2>Take a Course</h2>
-        <p>
-            IFC 5 is the latest evolution in openBIM standards, enabling seamless collaboration, 
-            improved data exchange, and more efficient workflows. 
-            Whether you're a seasoned professional or just starting in the field, this course will equip you with the knowledge 
-            about the current status of IFC 5 and it's relation to other standards.
-        </p>
-        <p>
-            The 'alpha' version has just been released. Feel free to have a look at <a href="https://github.com/buildingSMART/IFC5-development">https://github.com/buildingSMART/IFC5-development</a>. 
-        </p>
-        <a href="https://learn.ifcx.dev/products/courses/master-ifc-5-course" class="cta-button">Join the course</a>
-        <p>
-            Start the course using the link and follow the videos.
-        </p>
-    </main>
-    <footer>
-        <p>&copy; 2025 BuildingSMART International. All rights reserved.</p>
-        <p>Questions? <a href="mailto:technical@buildingsmart.org">Contact Us</a></p>
-    </footer>
+    <div class="message">
+        Redirecting to the IFC5 Viewer. If nothing happens, <a href="viewer/index.html">click here</a>.
+    </div>
 </body>
 </html>
